# zentype

./: .gitignore  API_design.md  Cargo.toml  Code editor checklist.md  Features.md  Folder_structure.md  README.md  Roadmap.md  Zenthra_requirements.md  Zentype_Core_Vision.md  cargo  docs_structure.md
docs/: getting_started.md  index.md
docs/api/: color.md  font-weight.md  text-options.md  text-options.md#L45-L60
docs/architecture/: overview.md
docs/getting-started/: first-render.md  installation.md
docs/guides/: line-highlights.md
docs/traits/: overview.md
examples/: aesthetic_options.rs  alignment.rs  background.rs  colors.rs  font_metrics.rs  hello.rs  layout.rs  playground.rs  shaping_debug.rs  simple.rs  styling.rs
images/backround/: backround.md
images/hello/: hello.md
scratch/: check_fields.rs  check_glyphs.rs  check_metrics.rs  check_runs.rs
src/: lib.rs  main.rs  prelude.rs  testing.rs
src/defaults/: cosmic_font.rs  mod.rs  swash_raster.rs  zentype_atlas.rs
src/gpu/: atlas.rs  mod.rs  pipeline.rs  shader.wgsl
src/managed/: mod.rs  zentype.rs
src/primitives/: atlas.rs  mod.rs  pipeline.rs  shaped_buffer.rs
src/providers/: cosmic.rs  mod.rs  swash.rs
src/renderer/: mod.rs  text_renderer.rs
src/traits/: atlas.rs  font_provider.rs  mod.rs  rasterizer.rs
src/types/: color.rs  glyph.rs  line.rs  mod.rs  options.rs  shaped_glyph.rs
tests/: core_types_test.rs  integration_test.rs  interactivity.rs  test_colors.rs  test_options.rs
