[package]
name = "zentype"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A high-performance modular text rendering engine for Rust"
license = "Apache-2.0"
repository = "https://github.com/kabirajpan/zentype"
readme = "README.md"
keywords = ["text", "rendering", "wgpu", "gpu", "typography"]
categories = ["rendering::graphics-api", "graphics"]
exclude = [
    "target/",
    "ROADMAP.md",
    ".gitignore",
]

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
cosmic-text = { version = "0.18.2", features = ["swash"] }
env_logger = "0.11.10"
etagere = "0.3.0"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "29.0.1"
winit = "0.30.13"
